--- a/css/styles.css
+++ b/css/styles.css
@@ -3,101 +3,140 @@
   background-color: #ff4c68;
 }
 
-
 /******************************** html tags */
-body{
+body {
   font-family: "Montserrat";
 }
-h1{
-font-family: 'Montserrat-black', sans-serif;
-font-weight: 900;
-font-size: 3.5rem;
-line-height: 1.5;
-color: #fff;
+
+h1 {
+  font-family: 'Montserrat-black', sans-serif;
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
+  color: #fff;
 }
+
 h2 {
-font-family: "Montserrat";
-font-weight: bold;
-font-size: 3rem;
-line-height: 1.5;
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 1.5;
 }
+
 h3 {
   font-size: 1.5rem;
   font-weight: bold;
 }
+
 p {
   color: #8f8f8f;
 }
-/********************************* classes */
-.container-fluid{
-  padding: 3% 15%;
-}
-/******************************** Nav Bar */
 
+/********************************* classes */
+.container-fluid {
+  padding: 3% 15% 7%;
+}
+
+/******************************** Nav Bar */
 .navbar {
   padding: 0 0 4.5rem
-
 }
+
 .navbar-brand {
   font-family: "Ubuntu";
   font-size: 2.5rem;
   font-weight: bold;
 }
+
 .nav-item {
   padding: 0 18px;
 }
+
 .nav-link {
   font-size: 1.2rem;
   font-family: "Montserrat";
   font-weight: lighter;
 }
+
 /**************************** download button */
 .download-button {
   margin: 5% 3% 5% 0;
 }
+
 /********************************* Title Img */
 .iphone {
   width: 60%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
 }
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+
+  .iphone {
+    position: static;
+    transform: rotate(0);
+  }
+}
+
 /*********************** Middle section symbols then text */
 #features {
   padding: 7% 15%;
+  background-color: #ffffff;
+  position: relative;
+  z-index: 1;
 }
-.circle-img :hover {color: #ff4c68;}
+
+.circle-img :hover {
+  color: #ff4c68;
+}
+
 .circle-img {
   font-size: 4rem;
   position: relative;
 }
-.target-img :hover {color: #ff4c68;}
+
+.target-img :hover {
+  color: #ff4c68;
+}
+
 .target-img {
   font-size: 4rem;
   position: relative;
 }
-.heart-img :hover {color: #ff4c68;}
+
+.heart-img :hover {
+  color: #ff4c68;
+}
+
 .heart-img {
   font-size: 4rem;
   position: relative;
 }
+
 .feature-box {
   text-align: center;
   padding: 5%;
 }
 
-
 /*********************** Testimonial Section */
 #testimonials {
-text-align: center;
-background-color: #ff4c68;
-color: #fff;
+  text-align: center;
+  background-color: #ff4c68;
+  color: #fff;
 }
+
 .testimonial-image {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
 }
+
 .carousel-item {
-padding: 7% 15%;
+  padding: 7% 15%;
 }
 
 /****************************** Press */
@@ -106,7 +145,44 @@ padding: 7% 15%;
   text-align: center;
   padding-bottom: 3%;
 }
+
 .press-logo {
   width: 15%;
   margin: 20px 20px 50px;
+}
+
+/********************************* Pricing */
+#pricing {
+  padding: 100px 25px;
+  text-align: center;
+}
+
+.pricing-col {
+  padding: 3% 2%;
+}
+
+/**************************** Call To Action */
+#cta {
+  background-color: #ff4c68;
+  font-family: Montserrat-black;
+  color: #fff;
+  text-align: center;
+  padding: 7% 15%;
+}
+
+.cta-text {
+  font-size: 3.5rem;
+  line-height: 1.5;
+  padding: 3% 15% 3%;
+}
+
+/******************************** Footer */
+#footer {
+  background-color: #fff;
+  padding: 7% 15%;
+  text-align: center;
+}
+
+.social-icon {
+  margin: 20px 10px;
 }
